Removed OnShowingPastePopup

OnShowingPastePopup was a hack that is causing test flakiness. This CL removes it.

BUG=592428

Review-Url: https://codereview.chromium.org/2468043002
Cr-Commit-Position: refs/heads/master@{#429189}

Former-commit-id: abb5f9cb42bdfe9b13c71d02496131d24e96f6f3